[project]
name = "pubmedmcp"
dynamic = ["version"]
description = "A MCP server for PubMed data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git@main",
    "pubmedclient>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pubmedmcp/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pubmedmcp = "pubmedmcp.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "typer>=0.15.1",
]
