[project]
name = "pubmedmcp-http-vercel"
dynamic = ["version"]
description = "A HTTP-streamable MCP server for PubMed data with stateless architecture, optimized for Vercel deployment"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PubMed MCP Contributors"}
]
keywords = ["mcp", "pubmed", "ncbi", "vercel", "serverless", "medical-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0", 
    "httpx>=0.27.1",
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "pubmedclient @ git+https://github.com/grll/pubmedclient.git",
    "starlette",
    "uvicorn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pubmedmcp/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pubmedmcp"]

[project.scripts]
pubmedmcp = "pubmedmcp.server:main"

[project.urls]
Homepage = "https://github.com/orkestralai/pubmedmcp-http"
Repository = "https://github.com/orkestralai/pubmedmcp-http"
Issues = "https://github.com/orkestralai/pubmedmcp-http/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "typer>=0.15.1",
]
